# RayTracer

./: CMakeLists.txt  LICENSE  README.md
src/: Camera.cpp  Geometry.cu  Ray.cpp  Renderer.cpp  Renderer.cu  UI.cpp  main.cpp
src/Material/: Material.cu  Material.h
src/app/: Application.cpp  Application.cu  Application.h  UI.cpp  UI.h
src/include/: Camera.h  Geometry.h  Ray.h  Renderer.h  Scene.h  math.h
src/renderer/: Renderer.cu  Renderer.h
src/scene/: Camera.cu  Camera.h  Geometry.cu  Geometry.h  Light.cu  Light.h  Ray.cpp  Ray.h  Scene.cu  Scene.h
src/shader/: shader.cu  shader.h
src/utils/: HitRecord.h  Timer.h  math.h
